<?xml version="1.0"?>
<package format="2">
	<name>dr_kdl</name>
	<version>1.0.0</version>
	<description>Delft Robotics KDL functions.</description>
	<license>all-rights-reserved</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>dr_base</depend>
	<depend>dr_util</depend>
	<depend>dr_eigen</depend>
	<depend>kdl_parser</depend>
</package>
