<?xml version="1.0"?>
<package format="2">
	<name>dr_kdl</name>
	<version>1.0.0</version>
	<description>Delft Robotics KDL functions.</description>
	<license>Apache v2.0</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>dr_eigen</depend>
	<depend>eigen</depend>
	<depend>kdl_parser</depend>
	<depend>orocos_kdl</depend>
	<depend>sensor_msgs</depend>
	<test_depend>rosunit</test_depend>
</package>
