<?xml version="1.0"?>
<package format="2">
	<name>dr_kdl</name>
	<version>1.0.1</version>
	<description>Delft Robotics KDL functions.</description>
	<license>Apache v2.0</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>eigen</depend>
	<depend>kdl_parser</depend>
	<depend>orocos_kdl</depend>
	<depend>sensor_msgs</depend>
	<test_depend>dr_eigen</test_depend>
</package>
